# reticulum-rs-esp32

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
.claude/agents/: rust-code-guardian.md
config/: sdkconfig.defaults  sdkconfig.production  sdkconfig.qemu
docs/: TODO-testing.md  future-work.md  implementation-guide.md  interrupt-driven-radio-plan.md  lora-testing-strategy.md  memory-analysis.md  persistence-module-improvements.md  qemu-setup.md  research-findings.md  reticulum-rs-feature-analysis.md  scalable-routing-proposal.md  testing-strategy.md  wifi-module-improvements.md
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: test-qemu.sh
src/: chat.rs  host_utils.rs  lib.rs  main.rs  message_queue.rs  node.rs  persistence.rs  persistence_host.rs  testing.rs
src/announce/: cache.rs  mod.rs
src/ble/: fragmentation.rs  mod.rs
src/config/: ble_service.rs  mod.rs  wifi.rs
src/lora/: airtime.rs  config.rs  csma.rs  duty_cycle.rs  iface.rs  mod.rs  radio.rs
src/network/: host.rs  mod.rs  stats_server.rs  wifi.rs
src/routing/: mod.rs  path_table.rs
src/testnet/: config.rs  mod.rs  transport.rs
src/wifi/: ble_service.rs  config.rs  connection.rs  mod.rs  storage.rs
