[package]
name = "reticulum-rs-esp32"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["macros"]

[lib]
name = "reticulum_rs_esp32"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"
test = false

[[bin]]
name = "flash-esp32"
path = "src/bin/flash-esp32.rs"
test = false

[[bin]]
name = "esp32-test-runner"
path = "src/bin/esp32-test-runner.rs"
test = false

[[bin]]
name = "production-flash"
path = "src/bin/production-flash.rs"
test = false

[[bin]]
name = "configure-wifi"
path = "src/bin/configure-wifi.rs"
test = false

[[bin]]
name = "flash-wifi-config"
path = "src/bin/flash-wifi-config.rs"
test = false

[features]
default = []
esp32 = [
    "dep:esp-idf-sys",
    "dep:esp-idf-svc",
    "dep:esp-idf-hal",
    "dep:esp32-nimble",
    "dep:sx1262",
    "dep:regiface",
]

# Region selection (pick one, EU868 is default)
region-eu868 = []
region-us915 = []
region-au915 = []
region-as923 = []

[dependencies]
# ESP-IDF framework (only for esp32 target)
esp-idf-sys = { version = "0.36", features = ["binstart"], optional = true }
esp-idf-svc = { version = "0.51", features = ["alloc"], optional = true }
esp-idf-hal = { version = "0.45", optional = true }

# BLE support (only for esp32 target)
esp32-nimble = { version = "0.11", optional = true }

# LoRa radio driver (SX1262, only for esp32 target)
sx1262 = { version = "0.3", optional = true }
# Register interface traits (for raw SX1262 commands)
regiface = { version = "0.2.5", optional = true }

# Reticulum-rs (using fork with ESP32 compatibility patches)
# Always included - only QEMU skips the network loop at runtime
reticulum = { git = "https://github.com/zond/Reticulum-rs", branch = "esp32-compat", default-features = false, features = ["alloc"] }

# Async runtime - reticulum brings tokio but we need extra features
# Note: signal feature only works on host, added via target-specific dep below
tokio = { version = "1.44", features = ["macros"] }
tokio-util = "0.7"

# Random number generation (for identity creation)
rand_core = { version = "0.6", features = ["getrandom"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Security: zero sensitive data on drop
zeroize = { version = "1.7", features = ["derive"] }

# HTTP server for stats endpoint (works on both host and ESP32)
tiny_http = "0.12"

# File globbing (for test runner port detection)
glob = "0.3"

[dev-dependencies]
# Test macro for #[esp32_test]
reticulum-rs-esp32-macros = { path = "macros" }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

# Host-only dependencies (signal handling for Ctrl+C, test runner hashing/JSON parsing)
[target.'cfg(not(target_os = "espidf"))'.dependencies]
tokio = { version = "1.44", features = ["macros", "signal"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
